MET-5968 Created a new script to write down historical data into mongo